Land dual-instrumentation phase 2: CROCHET-driven concolic loop flips a branch
The two-javaagent approach (Galette first then CROCHET, or vice versa)
does not work — each order hits its own wall documented in CombinedAgent's
class javadoc. This commit introduces ONE combined agent jar whose premain
installs a single ClassFileTransformer that chains Galette then CROCHET,
plus a skip-list for three known bootstrap-recursion groups and a pre-init
of ThreadLocalRandom / LockSupport / StringConcatFactory / two MethodHandle
internals to dodge the class-circularity error CROCHET's own demos avoid
only by accident of ordering.

With that in place, ConcolicLoopITCase now runs the full loop end-to-end
on /tmp/jdk-dual-ga-first: it starts knarr-server on a plain JDK, forks a
dual-JDK child under -javaagent:Crochet-Galette-Bridge-*.jar, and drives
the target through 10 iterations until x=128 trips the throw branch.

ConcolicDriver now calls Symbolicator.reset() before the first checkpoint
so PathUtils/Symbolicator statics are fully initialised at checkpoint time
— without that, CROCHET's rollback reverts them to their pre-<clinit>
null state and the next iteration NPEs in Symbolicator.reset.

Evidence: mvn -pl knarr-concolic test -Dcrochet.dualJdk=/tmp/jdk-dual-ga-first
passes 4/4 tests in ~70s and concolic-it-output.txt ends with
"CONCOLIC_REACHED_THROW x=128".

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>